feat: 添加 Bullet3 物理引擎作为 Git submodule
变更内容：

1. 新增 Git submodule: rust_engine/deps/bullet3
   - 来源: https://github.com/bulletphysics/bullet3.git
   - 用于 Rust 物理引擎的 C++ Bullet3 碰撞检测与刚体动力学
   - build.rs 编译 Bullet3 源码为静态库，链接到 mmd_engine cdylib

2. 修改 .gitignore: bullet3/ -> /bullet3/
   - 原规则会匹配所有路径中的 bullet3/ 目录，阻止 submodule 添加
   - 改为仅忽略仓库根目录下的 bullet3/ 文件夹

3. 新增 .gitmodules 配置
   - 确保 clone 时使用 --recurse-submodules 或
     git submodule update --init --recursive 可自动拉取依赖
   - CI (build-mod.yml) 已配置 submodules: recursive，无需额外修改